--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon server2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,11 +20,16 @@
   },
   "homepage": "https://github.com/aibenStunner/private-chat-app#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.5.0",
     "@prisma/client": "^4.0.0",
     "apollo-server": "^3.10.0",
+    "apollo-server-express": "^3.10.0",
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-ws": "^5.9.1",
+    "jsonwebtoken": "^8.5.1",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
