--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.9.1",
     "jsonwebtoken": "^8.5.1",
     "ws": "^8.8.1"
